--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <h1 class="text-center" id="todo">Express + Prisma + MongoDB</h1>
-    <h2 class="text-center">To Do List</h2>
+    <h2 class="text-center">Poopy List</h2>
 
     <section style="background-color:rgb(4 0 255 / 6%);">
       <div class="container-lg p-5">
